--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+        		<li><a href="/">Inicio</a></li>
+	        	<li><a href="/about">Repositorio</a></li>
+        		<li><a href="/cv">Proyectos</a></li>
+        		<li><a href="/blog">Contactos</a></li>
     		</ul>
 		</nav>
 		<div class="container">
