--- a/donacion.html
+++ b/donacion.html
@@ -28,7 +28,7 @@
 					<div class="opener-holder">
 						<a href="#" class="nav-opener"><span></span></a>
 					</div>
-					<a href="donacion.html" class="btn btn-primary rounded">Donar</a>
+					<a href="donacion" class="btn btn-primary rounded">Donar</a>
 					<div class="nav-drop">
 						<ul>
 							<li class="active visible-sm visible-xs"><a href="/">Inicio</a></li>
