--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="row">
 				<div class="text-box col-md-offset-1 col-md-10">
 					<h2>Lo que buscamos</h2>
-					<p>Todos los proyectos que se desarrollan en UMSS CODE, están efocados al mejoramiento de la calidad académica en la educación superior. Así mismo se seleccionarán proyectos open source para su implementación y se apoyará a las comunidades en el mejoramiento de estos proyectos.</p>
+					<p>Todos los proyectos que se desarrollan en UMSS CODE, están efocados al mejoramiento de la calidad académica en la educación superior. Así mismo se seleccionarán proyectos open source existentes, para su implementación.</p>
 
 				</div>
 			</div>
