--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>UMSS Code | Inicio</title>
+	<title>{umss.io} | Inicio</title>
 	<meta name="description" content="Desarrollamos proyectos que permitan mejorar la calidad académica en la educación superior">
 	<meta name="keywords" content="umss, academia, ciencia, eventos, investigación, desarrollo, innovación, web app, start-up">
-	<meta name="author" content="UMSS Code">
 	<link rel="icon" type="image/png" href="favicons/favicon.png" sizes="32x32">
 	<link rel="manifest" href="favicons/manifest.json">
 	<link rel="shortcut icon" href="favicons/favicon.ico">
