--- a/apoyo.html
+++ b/apoyo.html
@@ -55,8 +55,8 @@
             <div class="fb-like" data-href="http://innovabolivia.bo/w2015/universitaria/aios-software-estructural" data-layout="standard" data-action="like" data-show-faces="true" data-share="false"></div>
         </div>
     </div>
-    <div class="row" style="margin:0 auto;">
-        <div class="fb-share-button" data-href="https://www.umss.io/apoyo.html" data-layout="button_count"></div>        
+    <div class="row" style="margin:0 auto; clear:both; text-align:center;">
+         <div class="fb-share-button" data-href="https://www.umss.io/apoyo.html" data-layout="button_count"></div>        
     </div>
 </div>
 
