--- a/apoyo.html
+++ b/apoyo.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
     <!-- You can use open graph tags to customize link previews.
     Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
-	<meta property="og:url"           content="http://innovabolivia.bo/" />
+	<meta property="og:url"           content="//umss.io/apoyo" />
 	<meta property="og:type"          content="website" />
 	<meta property="og:title"         content="Ellos necesitan de tu apoyo" />
 	<meta property="og:description"   content="Proyectos desarrollados por estudiantes de la UMSS" />
