--- a/apoyo.html
+++ b/apoyo.html
@@ -39,7 +39,7 @@
             Apoya estos proyectos con tu like:
             <ol>
                 <li>Dale Me Gusta haciendo click en el botón me gusta</li>
-                <li>Confirma tu like en la ventana emergente que se muestra inmediatamente después de presionar el botón me gusta.</li>
+                <li>Confirma tu like haciendo click en "confirmar", te abrirá una ventana emergente donde debes volver a presionar el botón "Me gusta".</li>
             </ol>
         </p>
     </div>
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="row" style="margin:0 auto; clear:both; text-align:center;">
-        <h3>Que otro se enterén</h3>
+        <h3>Que otro se enteren</h3>
          <div class="fb-share-button" data-href="https://www.umss.io/apoyo.html" data-layout="button_count"></div>        
     </div>
 </div>
