--- a/apoyo.html
+++ b/apoyo.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="row" style="margin:0 auto; clear:both; text-align:center;">
-        <h3>Que otro se enteren</h3>
+        <h3>Que otros se enteren</h3>
          <div class="fb-share-button" data-href="https://www.umss.io/apoyo.html" data-layout="button_count"></div>        
     </div>
 </div>
