--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<section class="main">
 		<div class="container">
 			<div id="cta">
-				<a href="http://tympanus.net/codrops/?p=23525" class="btn btn-primary rounded">Involúcrate en el Proyecto</a>
+				<a href="#" class="btn btn-primary rounded">Involúcrate en el Proyecto</a>
 				<p>Tu idea y tu trabajo puede ayudar a la universidad a alcanzar la excelencia internacional</p>
 			</div>
 			<div class="row">
